--- a/ui/assets/css/app.css
+++ b/ui/assets/css/app.css
@@ -2,27 +2,87 @@ body, html {
   margin: 0;
   padding: 0; }
 
+.loader, .empty-message {
+  text-align: center;
+  padding: 2rem;
+  font-size: 2.5rem; }
+
+.back > span {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  color: white;
+  font-size: 30px;
+  border: 2px solid white;
+  border-radius: 1000px;
+  text-align: center;
+  width: 75px;
+  height: 75px;
+  line-height: 70px;
+  display: block; }
+
+.back:hover > span {
+  background: rgba(200, 200, 200, 0.75); }
+
 .list-items .list-item {
+  color: #333;
   overflow: hidden;
   position: relative;
   display: flex;
-  border-bottom: 1px solid #333333; }
+  border-bottom: 1px solid #000; }
   .list-items .list-item img {
     width: 100%; }
   .list-items .list-item .left, .list-items .list-item .right {
     display: flex;
     float: left;
-    padding: 1rem; }
+    padding: 0.75rem; }
   .list-items .list-item .left {
     width: 30%;
+    max-width: 250px;
     text-align: center;
-    background: black;
+    background: #333;
     color: white;
-    font-size: 2rem; }
+    font-size: 3rem; }
   .list-items .list-item .right {
-    width: 70%; }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 70%;
+    font-size: 2rem; }
+  .list-items .list-item .frame {
+    background-color: black;
+    position: relative;
+    width: 100%;
+    padding-top: 56%;
+    background-size: cover; }
+  .list-items .list-item .frame > .inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0; }
+  .list-items .list-item.video .frame > .inner {
+    display: none; }
+
+.list-items a:hover {
+  text-decoration: none; }
+  .list-items a:hover .list-item {
+    background: #eeeeee; }
+    .list-items a:hover .list-item .left {
+      background: #555; }
+    .list-items a:hover .list-item.video .frame > .inner {
+      background: rgba(100, 100, 100, 0.3);
+      display: flex; }
 
 .player {
-  min-height: 100vh; }
-  .player .stage {
-    background: black; }
+  min-height: 100vh;
+  background: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden; }
+  .player video {
+    max-height: 100vh; }
