--- a/ui/assets/sass/app.scss
+++ b/ui/assets/sass/app.scss
@@ -4,13 +4,40 @@ body, html {
 	padding: 0;
 }
 
+.loader, .empty-message {
+	text-align: center;
+	padding: 2rem;
+	font-size: 2.5rem;
+}
+
+.back > span {
+	position: absolute;
+	top: 1rem;
+	left: 1rem;
+	color: white;
+	font-size: 30px;
+	border: 2px solid white;
+	border-radius: 1000px;
+	text-align: center;
+	width: 75px;
+    height: 75px;
+    line-height: 70px;
+	display: block;
+}
+
+.back:hover > span {
+	background: rgba(200,200,200,0.75)
+}
+
+
 .list-items {
 
 	.list-item {
+		color: #333;
 		overflow: hidden;
 		position: relative;
 		display: flex;
-		border-bottom: 1px solid #333333;
+		border-bottom: 1px solid #000;
 
 		img {
 			width: 100%;
@@ -19,26 +46,84 @@ body, html {
 		.left, .right {
 			display: flex;
 			float: left;
-			padding: 1rem;
+			padding: 0.75rem;
 		}
+
 		.left {
 			width: 30%;
+			max-width: 250px;			
 			text-align: center;
-			background: black;
+			background: #333;
 			color: white;
-			font-size: 2rem;
+			font-size: 3rem;
 		}
 		.right {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;			
 			width: 70%;
+			font-size: 2rem;
+
+		}
+
+		.frame {
+			background-color: black;
+			position: relative;
+			width: 100%;
+			padding-top: 56%;			
+			background-size: cover;
+		}
+
+		.frame > .inner {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;			
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+		}
+
+		&.video .frame > .inner {
+			display: none;
 		}
 
 	}
+
+	a:hover {
+		text-decoration: none;
+
+		.list-item {
+			background: #eeeeee;
+		
+			.left {
+				background: #555;
+			}
+
+			&.video .frame > .inner {
+				background: rgba(100,100,100,0.3);
+				display: flex;
+			}
+
+		}
+
+
+	}
+
 }
 
 .player {
 	min-height: 100vh;
+	background: black;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	overflow: hidden;
 
-	.stage {
-		background: black;
+	video {
+		max-height: 100vh;
+
 	}
+
 }
