Improvements with concurrent encodings & stopping videos when leaving page

--- a/ui/assets/css/app.css
+++ b/ui/assets/css/app.css
@@ -78,7 +78,7 @@ body, html {
       display: flex; }
 
 .player {
-  min-height: 100vh;
+  height: 100vh;
   background: black;
   display: flex;
   flex-direction: column;
